--- a/paginas/pensamentos.html
+++ b/paginas/pensamentos.html
@@ -14,17 +14,47 @@
     <div class="subtitle">My Mind</div>
     <nav>
       <a href="../index.html">Introdução</a>
-      <a href="#nada">Nada</a>
-      <a href="sobre-mim.html">Sobre Mim</a>
+      <a href="#bela-dama">Bela Dama</a>
+      <a href="#empatia">Empatia</a>
       <a href="infancia.html">Infância</a>
       <a href="adolescencia.html">Adolescência</a>
       <a href="relacionamentos.html">Relacionamentos</a>
     </nav>
   </header>
   <main>
-    <section id="nada">
-      <h2>Nada</h2>
-      <p>Ainda não há nada aqui.</p>
+    <section id="bela-dama">
+      <h2>Bela Dama</h2>
+      <p>Ela é tão carinhosa. Às vezes, eu acordo e quero levantar da cama, mas ela implora para que eu fique lá, com ela, o dia inteiro. Ela é tão boa… Fiz tudo o que ela odeia: terapia, remédio, exercício, chocolate… e, mesmo assim, ela não desistiu de mim. Ela é tão sensata. Quando não estou bem e sinto vontade de desabafar, ela me mostra que é melhor guardar essas coisas para mim, assim não me torno um fardo para as pessoas. Ela é tão ciumenta. Precisei me afastar de quase todo mundo para que ela ficasse satisfeita, e até que não foi tão difícil, porque, quando estou com ela, é como se tudo perdesse a importância. Quando a gente está junto, nada parece real. Eu perco completamente a noção do tempo. O que mais eu posso dizer?</p>
+    </section>
+
+    <section id="empatia" class="section2">
+      <h2>Empatia</h2>
+      <p>Existe um padrão nas pessoas. Um reflexo automático que se acende diante da dor do outro. Choram por alguém, sofrem por alguém, se importam por alguém. Dizem que é empatia. Eu observo, compreendo o que acontece, mas não participo.</p>
+
+      <p>Não é que eu me recuse. Eu simplesmente não sinto nada.</p>
+
+      <p>É como assistir a uma peça pela centésima vez — você reconhece a estrutura, entende os papéis, sabe onde cada lágrima deveria cair. Mas não há impacto. Não há envolvimento. O choro de alguém, a dor de alguém, a fragilidade — tudo isso me passa como um som abafado atrás de um vidro grosso.</p>
+
+      <p>E quando há algo, não é o que se esperaria.</p>
+
+      <p>Se machuco alguém intencionalmente, sinto algo sim. É prazer. Um tipo de excitação quieta, centrada. Não é descontrole. É domínio. É como ativar um sistema que normalmente está em standby. Uma sensação limpa, sem culpa.</p>
+
+      <p>Se machuco sem intenção, o desconforto que surge não tem a ver com o outro. É comigo. Com a possibilidade de perda, com a consequência, com o custo. A preocupação é minha. Sempre foi.</p>
+
+      <p>A culpa, quando aparece, não vem de um lugar emocional. É estratégica. Uma equação de causa e efeito. Não carrego peso pelos outros. Carrego cálculo.</p>
+
+      <p>Já precisei simular o que não vinha naturalmente. Aprendi a sorrir nos momentos certos, a apertar mãos, a parecer afetado quando era conveniente. Com o tempo, isso se tornou automático. As pessoas raramente percebem. É fácil imitar humanidade. Difícil é sentir.</p>
+
+      <p>Dizem que a empatia é o que nos conecta.
+      <br>Mas a mim, ela nunca se conectou.
+      <br>E não é uma ausência que me atormenta.
+      <br>É apenas um fato.</p>
+
+
+      <p>Uma constatação simples: eu não sinto.
+      <br>E tudo continua.
+      <br>Não é algo que quero mudar.
+      <br>É apenas como eu funciono.</p>
     </section>
   </main>
   <footer>
@@ -62,7 +92,7 @@
       }, 0);
 
       const firefliesContainer = document.querySelector('.fireflies');
-      const numberOfFireflies = 7;
+      const numberOfFireflies = 20;
 
       function generateFirefly() {
         const firefly = document.createElement('div');
